--- a/index.html
+++ b/index.html
@@ -35,25 +35,31 @@
       <p class="text-white font-outfit text-[18px] font-semibold leading-8">
         Equilibrium #3429
       </p>
-      <p class="text-softBlue font-semibold leading-5">
+      <p class="text-softBlue font-light leading-5">
         Our Equilibrium collection promotes balance and calm.
       </p>
       <br />
-      <div class="flex justify-between">
+      <div class="flex justify-between font-semibold">
         <div class="flex">
           <img src="/images/icon-ethereum.svg" alt="" />
           <p class="text-cyan ml-2">0.041 ETH</p>
         </div>
-        <p class="text-softBlue">3 days left</p>
+        <div class="flex">
+          <img src="./images/icon-clock.svg" alt="" class="mr-2" />
+          <p class="text-softBlue">3 days left</p>
+        </div>
       </div>
       <br />
-      <div class="flex">
+      <div class="flex border-t border-softBlue pt-2">
         <img
           src="./images/image-avatar.png"
           alt=""
-          class="h-8 w-8 mr-1 border-white"
+          class="h-8 w-8 mr-5 border border-white rounded-full"
         />
-        <p class="text-white">Creation of Jules Wyvern</p>
+        <p class="text-white mt-1">
+          <span class="text-softBlue"> Creation of </span>
+          Jules Wyvern
+        </p>
       </div>
     </div>
 
