--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
       sizes="32x32"
       href="./images/favicon-32x32.png"
     />
-    <link rel="stylesheet" href="https://fonts.google.com/specimen/Outfit" />
     <link rel="stylesheet" href="output.css" />
     <title>Frontend Mentor | NFT preview card component</title>
 
@@ -27,39 +26,41 @@
     </style>
   </head>
   <body>
-    <div
-      class="bg-cardBlue isDesktop:mt-[50%] isDesktop:w-[350px] p-7 rounded-xl ml-auto mr-auto"
-    >
-      <img src="./images/image-equilibrium.jpg" class="rounded-xl" />
-      <br />
-      <p class="text-white font-outfit text-[18px] font-semibold leading-8">
-        Equilibrium #3429
-      </p>
-      <p class="text-softBlue font-light leading-5">
-        Our Equilibrium collection promotes balance and calm.
-      </p>
-      <br />
-      <div class="flex justify-between font-semibold">
-        <div class="flex">
-          <img src="/images/icon-ethereum.svg" alt="" />
-          <p class="text-cyan ml-2">0.041 ETH</p>
-        </div>
-        <div class="flex">
-          <img src="./images/icon-clock.svg" alt="" class="mr-2" />
-          <p class="text-softBlue">3 days left</p>
-        </div>
-      </div>
-      <br />
-      <div class="flex border-t border-softBlue pt-2">
-        <img
-          src="./images/image-avatar.png"
-          alt=""
-          class="h-8 w-8 mr-5 border border-white rounded-full"
-        />
-        <p class="text-white mt-1">
-          <span class="text-softBlue"> Creation of </span>
-          Jules Wyvern
+    <div class="flex items-center justify-center h-screen">
+      <div
+        class="bg-cardBlue isDesktop:w-[350px] p-7 rounded-xl ml-auto mr-auto"
+      >
+        <img src="./images/image-equilibrium.jpg" class="rounded-xl" />
+        <br />
+        <p class="text-white font-Outfit text-[18px] font-semibold leading-8">
+          Equilibrium #3429
         </p>
+        <p class="text-softBlue font-light leading-5">
+          Our Equilibrium collection promotes balance and calm.
+        </p>
+        <br />
+        <div class="flex justify-between font-semibold">
+          <div class="flex">
+            <img src="/images/icon-ethereum.svg" alt="" />
+            <p class="text-cyan ml-2">0.041 ETH</p>
+          </div>
+          <div class="flex">
+            <img src="./images/icon-clock.svg" alt="" class="mr-2" />
+            <p class="text-softBlue">3 days left</p>
+          </div>
+        </div>
+        <br />
+        <div class="flex border-t border-softBlue pt-2">
+          <img
+            src="./images/image-avatar.png"
+            alt=""
+            class="h-8 w-8 mr-5 border border-white rounded-full"
+          />
+          <p class="text-white mt-1">
+            <span class="text-softBlue"> Creation of </span>
+            Jules Wyvern
+          </p>
+        </div>
       </div>
     </div>
 
