--- a/index.html
+++ b/index.html
@@ -25,27 +25,26 @@
       }
     </style>
   </head>
-  <body>
+  <body class="text-[18px] font-Outfit isMobile:m-7">
     <div class="flex items-center justify-center h-screen">
       <div
         class="bg-cardBlue isDesktop:w-[350px] p-7 rounded-xl ml-auto mr-auto"
       >
         <img src="./images/image-equilibrium.jpg" class="rounded-xl" />
         <br />
-        <p class="text-white font-Outfit text-[18px] font-semibold leading-8">
-          Equilibrium #3429
-        </p>
+        <p class="text-white font-semibold leading-8">Equilibrium #3429</p>
         <p class="text-softBlue font-light leading-5">
           Our Equilibrium collection promotes balance and calm.
         </p>
         <br />
         <div class="flex justify-between font-semibold">
           <div class="flex">
-            <img src="/images/icon-ethereum.svg" alt="" />
+            <img src="/images/icon-ethereum.svg" alt="" class="w-4 h-6" />
+            <img src="" alt="" />
             <p class="text-cyan ml-2">0.041 ETH</p>
           </div>
           <div class="flex">
-            <img src="./images/icon-clock.svg" alt="" class="mr-2" />
+            <img src="./images/icon-clock.svg" alt="" class="mr-2 w-6 h-6" />
             <p class="text-softBlue">3 days left</p>
           </div>
         </div>
