--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <br />
         <div class="flex justify-between font-semibold">
           <div class="flex">
-            <img src="/images/icon-ethereum.svg" alt="" class="w-4 h-6" />
+            <img src="./images/icon-ethereum.svg" alt="" class="w-4 h-6" />
             <img src="" alt="" />
             <p class="text-cyan ml-2">0.041 ETH</p>
           </div>
