test img for gitpages

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <div class="flex justify-between font-semibold">
           <div class="flex">
             <img src="./images/icon-ethereum.svg" alt="" class="w-4 h-6" />
-            <img src="" alt="" />
+            <img src="./images/icon-view.svg" alt="" />
             <p class="text-cyan ml-2">0.041 ETH</p>
           </div>
           <div class="flex">
