--- a/index.html
+++ b/index.html
@@ -30,7 +30,11 @@
       <div
         class="bg-cardBlue isDesktop:w-[350px] p-7 rounded-xl ml-auto mr-auto"
       >
-        <img src="./images/image-equilibrium.jpg" class="rounded-xl" />
+        <img
+          src="./images/image-equilibrium.jpg"
+          class="rounded-xl"
+          alt="image of cube"
+        />
         <br />
         <p class="text-white font-semibold leading-8">Equilibrium #3429</p>
         <p class="text-softBlue font-light leading-5">
@@ -39,11 +43,19 @@
         <br />
         <div class="flex justify-between font-semibold">
           <div class="flex">
-            <img src="./images/icon-ethereum.svg" alt="" class="w-4 h-6" />
+            <img
+              src="./images/icon-ethereum.svg"
+              alt="ethereum icon"
+              class="w-4 h-6"
+            />
             <p class="text-cyan ml-2">0.041 ETH</p>
           </div>
           <div class="flex">
-            <img src="./images/icon-clock.svg" alt="" class="mr-2 w-6 h-6" />
+            <img
+              src="./images/icon-clock.svg"
+              alt="clock icon"
+              class="mr-2 w-6 h-6"
+            />
             <p class="text-softBlue">3 days left</p>
           </div>
         </div>
@@ -51,7 +63,7 @@
         <div class="flex border-t border-softBlue pt-2">
           <img
             src="./images/image-avatar.png"
-            alt=""
+            alt="avatar image"
             class="h-8 w-8 mr-5 border border-white rounded-full"
           />
           <p class="text-white mt-1">
