--- a/index.html
+++ b/index.html
@@ -36,12 +36,12 @@
           alt="image of cube"
         />
         <br />
-        <p class="text-white font-semibold leading-8">Equilibrium #3429</p>
-        <p class="text-softBlue font-light leading-5">
+        <p class="text-white font-semibold pb-5">Equilibrium #3429</p>
+        <p class="text-softBlue font-light leading-6">
           Our Equilibrium collection promotes balance and calm.
         </p>
         <br />
-        <div class="flex justify-between font-semibold">
+        <div class="flex justify-between font-semibold mb-3">
           <div class="flex">
             <img
               src="./images/icon-ethereum.svg"
@@ -59,8 +59,7 @@
             <p class="text-softBlue">3 days left</p>
           </div>
         </div>
-        <br />
-        <div class="flex border-t border-softBlue pt-2">
+        <div class="flex border-t border-lineBlue pt-2">
           <img
             src="./images/image-avatar.png"
             alt="avatar image"
